syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "user.proto";

option go_package = "github.com/lovelyoyrmia/ecommerce/domain/pb";

service UserService {
    rpc CreateUser (CreateUserParams) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/register"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to register a new user"
            summary: "Register User"
        };
    };
    rpc LoginUser (LoginUserParams) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/login"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to login user and get access token & refresh token"
            summary: "Login User"
        };
    };
}